[project]
name = "claude-code-kimi-groq"
version = "0.1.0"
description = "A proxy server that enables Claude Code to use Kimi K2 through Groq's API"
authors = [
    {name = "chong-u"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "pydantic",
    "python-dotenv",
    "rich",
]

[project.scripts]
proxy = "proxy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []